--- a/composer.json
+++ b/composer.json
@@ -19,15 +19,13 @@
         "egulias/email-validator": "~2.0"
     },
     "require-dev": {
-        "mockery/mockery": "~0.9.1"
+        "mockery/mockery": "1.0.x-dev"
     },
     "autoload": {
         "files": ["lib/swift_required.php"]
     },
     "autoload-dev": {
-        "psr-0": {
-            "Swift_": "tests/unit"
-        }
+        "psr-0": { "Swift_": "tests/unit" }
     },
     "extra": {
         "branch-alias": {
